# unisiegen-advanced-c--class

./: .gitignore  README.md
01_designing/: 01_designing.project  01_designing.workspace  BDayCentre.cpp  Birthday  Birthday.cpp  CMakeLists.txt  compile_commands.json
02_data/: example.cpp  vinsystem
03_basic_statements/: CMakeLists.txt  exam1  exam1.cpp  example0  example00.cpp  example01.cpp  example02.cpp  example03.cpp  example04  example04.cpp  example05.cpp  example06  example06.cpp  example07  example07.cpp  example08  example08.cpp  example2024e1  example2024e1.cpp
04_functions/: bluetooth.cpp  fizzbuzz  fizzbuzz.cpp  maze00  maze00.cpp  maze01  maze01.cpp  variadic.cpp
05_arrays/: example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  lambda00.cpp
06_classes/: arithm.cpp  assign01.cpp  assign02.cpp  assign03.cpp  complex.cpp  copyTest.cpp  example00.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  fileTest.cpp  intro.cpp  strings.cpp
07_pointers/: example00.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp  functionPointers.cpp  functionPointers2.cpp  swapRefObj.cpp  unique_ptr.cpp
08_inheritance/: example00.cpp  example01.cpp  example02.cpp  polyDemo.cpp
09_exceptions/: example00.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example05_solution.cpp  example06.cpp  example06_solution.cpp  example07.cpp  example07_solution.cpp  example08.cpp  example08_solution.cpp
10_containers/: comparison.cpp  example01.cpp  example02.cpp  example03.cpp  multiset.cpp  priority.cpp
10_streams/: Makefile  example00.cpp  example01.cpp  example02.cpp
11_templates/: example00.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  example10_solution.cpp  example11.cpp  example11_solution.cpp
12_abstract/: Abstract.cpp  DestructorVirtual.cpp  DiamondExample.cpp  Strategy.cpp  (+6 more)
(+34 files in other folders)
